# active-graph-kg

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  MARKET_READINESS_FINAL.md  OPERATIONS.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_SCAN.md  VALIDATION_CHECKLIST.md  enable_rls_policies.sql  mkdocs.yml  pyproject.toml  railway.connector-worker.json  railway.json  railway.worker.json  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  test-scoring-modes.yml
activekg/: __init__.py
activekg/api/: admin_connectors.py  auth.py  global_memory.py  main.py
activekg/common/: env.py  exceptions.py  logger.py  metrics.py  migration_manifest.py  validation.py
activekg/connectors/: base.py  cache_subscriber.py  chunker.py  config_store.py  cursor_store.py  extract.py  ingest.py  retry.py  schemas.py  throttle.py  worker.py
activekg/connectors/providers/: gcs.py  s3.py
activekg/embedding/: global_candidates.py  queue.py  worker.py
activekg/engine/: embedding_provider.py  llm_provider.py  model_loading.py
activekg/extraction/: __init__.py  client.py  prompt.py  queue.py  schema.py  worker.py
activekg/graph/: candidate_identifiers.py  candidate_repository.py  models.py  repository.py
activekg/payloads/: document_processor.py
activekg/refresh/: incremental.py  scheduler.py
db/migrations/: 010_update_text_search_vector.sql  011_unique_tenant_external_id.sql  012_candidate_identity.sql  012_global_memory.sql  013_vantahire_provenance.sql  014_signal_job_tags.sql  015_candidate_profile.sql  016_candidate_rls.sql  017_reserve_quarantine_tenant.sql  018_tenant_nonblank.sql  019_global_reconciliation.sql  020_embed_version.sql
docs/: DRIVE_E2E_CHECKLIST.md  GCS_CONNECTOR.md  README.md  SCORING_MODES.md  api-reference.md  index.md
docs/archive/: index.md
docs/development/: architecture.md
docs/operations/: EMBEDDING_QUEUE.md  EXTRACTION_QUEUE.md  OPERATIONS.md  SELF_SERVE_RAILWAY.md
evaluation/datasets/: seed_with_jwt.py
scripts/: README.md  init_railway_db.py  start_railway.sh
tests/: test_candidate_identifiers.py  test_candidate_provenance.py  test_candidate_repository.py  test_candidate_resolve_endpoint.py  test_candidate_resolve_signal.py  test_candidate_resolve_vantahire_application.py  test_candidate_rls_enforcement.py  test_candidate_search_by_tags.py  test_connector_worker_multi_provider.py  test_deploy_path_guards.py  test_embedding_provider.py  test_global_candidate_embedding_text.py  test_jwt_scopes.py  test_scoring_modes.py
